--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Bwerbungswebsite
+title: Bewerbungswebsite
 description: [A short description of your site's purpose]
