--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Bewerbungswebsite
-description: [A short description of your site's purpose]
+title: Michael John
+description: About me
