--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 title: Michael John
 description: About me
 #logo: /assets/img/logo.png
-logo: /assets/img/me.jpg
+logo: /assets/img/IMG_8639_klein.jpg
